[package]
name = "rust_2dogl_test"
version = "0.1.0"
authors = ["zer0problem <allmynamearegone@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14.0"
png = "0.16.8"
image = "0.23.14"
c_string = "0.7.0"
rand = "0.8.3"
[dependencies.num-traits]
num-traits = "0.2.14"
[dependencies.glfw]
git = "https://github.com/bjz/glfw-rs.git"
